tests/e2e/function_without_return_returns_value3.story
function sayHello firstName: string secondName: string
    return "Hello {firstName} {secondName}!"
